Правки shopping-store service